--- a/datawig-examples.ipynb
+++ b/datawig-examples.ipynb
@@ -769,7 +769,8 @@
    "execution_count": 17,
    "id": "5bcea392",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "tags": []
    },
    "outputs": [
     {
@@ -803,7 +804,13 @@
    "cell_type": "code",
    "execution_count": 26,
    "id": "7e0eb28e",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
